@@ -14,7 +14,7 @@
 #define PTPERMM (72.0 / 25.4)
 
 #define DEFAULTTOLERANCE 5.0
-#define DEFAULTGRIDCOLOR 0x3f3fff3f
+#define DEFAULTGRIDCOLOR 0x3f3fff2f
 #define DEFAULTGUIDECOLOR 0x0000ff7f
 #define DEFAULTGUIDEHICOLOR 0xff00007f
 
